--- a/Basic_JavaScript_Projects/Project5_comparisons_type_coercion/index.html
+++ b/Basic_JavaScript_Projects/Project5_comparisons_type_coercion/index.html
@@ -24,7 +24,8 @@
             <p>
                 A = 88<br>
                 B = "88"<br>
-                A === B &nbsp;&nbsp;<span id="Tri_equal" onclick="triequal_Function()"></span></p>
+                A === B &nbsp;&nbsp;<span id="Tri_equal" onclick="triequal_Function()"></span>
+            </p>
             <button id="Tri_equal" onclick="triequal_Function()">Click for Answer!</button>
 
             <p>5 > 2 && 10 > 4 &nbsp;&nbsp;<span id="operator1" onclick="And_Function()"></span></p>
